@startuml database_er
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

' 管理员
entity "Team_Admin" as a2  {
    * id : number <<generated>>
    ---
    * team_id : number
    * username : varchar
    * password : varchar(32) <<MD5>>
}

' 团队
entity "Team" as t {
    * id : number <<generated>>
    ---
    * name : varchar
    * organizaion : varchar
    * code : varchar
}

' 志愿者
entity "Volunteer" as v {
    * id : number <<generated>>
    ---
    * team_id : number
    * name : varchar
    * id_number : varchar
    * gender : bool
    * employment : varchar
    * avatar : varchar
    * intention : varchar
    * experience : text
    * tel : varchar
    job_id : number
}

' 岗位
entity "Job" as j {
    * id : number <<generated>>
    ---
    * team_id : number
    * name : varchar
    * content : varchar
    * location : varchar
}

t ||..|{ a2
t ||..|{ v
t ||..o{ j
v }o--o| j
'
@enduml
